minikube/examples/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-demo
  labels:
    app: nginxhello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginxhello
  template:
    metadata:
      labels:
        app: nginxhello
    spec:
      containers:
      - name: nginx-hello-demo
        image: nginxdemos/nginx-hello
        ports:
        - containerPort: 80
