minikube/examples/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
spec:
  selector:
    app: nginxhello
  ports:
    - protocol: TCP
      port: 8080 # Port which this service will be listing to
      targetPort: 80 # Nginx deployment container port
