minikube/examples/ingress/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /my-new-grafana
            backend:
              service:
                name: grafana
                port:
                  number: 80
          - pathType: Prefix
            path: /my-new-nginx
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080
